--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ document.getElementById('initializeWeglotButton').addEventListener('click', () =
         Weglot.initialize({
             api_key: 'wg_627c1b8ae91049ce28e44bc3d33381230'
         });
-    }, 4000); // Espera 4 segundos
+    }, 4000); // um timmer de 4s
 });
     </script>
 </body>
